# mandelbrot

./: CMakeLists.txt  compile.sh
src/: mandelbrot.cpp
